--- a/client/src/style/DefaultLayout.css
+++ b/client/src/style/DefaultLayout.css
@@ -2,12 +2,12 @@
     height: 100vh !important;
 }
 
-.anticon svg {
+.ant-layout-header .anticon svg {
     display: flex;
     align-items: center;
     height: 20px;
     width: 20px;
-    margin-left: 20px;
+    margin: 0 auto;
 }
 
 .ant-layout-header {
@@ -43,6 +43,9 @@
     letter-spacing: 2px;
 }
 
-.cart-item{
+.cart-item {
+    display: flex;
+    align-items: center;
+    color: black;
     margin-right: 5px;
 }
