--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,3 +23,58 @@ body{
     height: 100px;
     width: 100px;
 }
+
+.category{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid lightgray;
+    margin: 25px;
+    padding: 7px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.category-active{
+    /* border: 2px solid rgb(123, 226, 123); */
+    box-shadow: 0 0 4px 1px lightblue;
+    background-color: aliceblue;
+}
+
+
+/* register page */
+.register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    background-color: rgba(243, 211, 211, 0.573);
+}
+
+.register-form {
+    background-color: rgba(211, 211, 211, 0.563);
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+/* login form */
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    background-color: rgba(243, 211, 211, 0.573);
+}
+
+.login-form {
+    background-color: rgba(211, 211, 211, 0.563);
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
